# proc

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  flake.nix  install.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml
Formula/: proc.rb
docs/: HOMEBREW_TAP.md  PUBLISHING.md
pkg/aur/: PKGBUILD
pkg/npm/: README.md  install.js  package.json  run.js
pkg/scoop/: proc.json
src/: error.rs  lib.rs  main.rs
src/commands/: by.rs  find.rs  find_in.rs  info.rs  kill.rs  list.rs  mod.rs  on.rs  ports.rs  ps.rs  stop.rs  stuck.rs  tree.rs  unstick.rs
src/core/: mod.rs  port.rs  process.rs  target.rs
src/ui/: mod.rs  output.rs
