[package]
name = "proc-cli"
version = "1.3.3"
edition = "2021"
authors = ["Yazeed Al Oyoun <me@yazeed.com>"]
description = "A semantic CLI tool for process management"
repository = "https://github.com/yazeed/proc"
homepage = "https://github.com/yazeed/proc"
documentation = "https://docs.rs/proc-cli"
license = "MIT"
keywords = ["process", "management", "port", "pid", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "proc"
path = "src/main.rs"

[dependencies]
# CLI Framework
clap = { version = "4.5", features = ["derive", "cargo", "unicode", "env"] }

# Output & Formatting
colored = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1.41", features = ["full"] }

# Cross-platform process/system info
sysinfo = "0.38"

# User Interaction
dialoguer = "0.12"
indicatif = "0.18"

# Regex (for pattern matching)
regex = "1.11"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Unix-specific (for signals)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["process", "signal"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-fmt"], default-features = false }

# cargo-binstall support (download pre-built binaries instead of compiling)
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/proc-{ target }{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
pkg-url = "{ repo }/releases/download/v{ version }/proc-windows-x86_64.exe.zip"
bin-dir = "proc-windows-x86_64.exe"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/proc-darwin-x86_64.tar.gz"
bin-dir = "proc-darwin-x86_64"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/proc-darwin-aarch64.tar.gz"
bin-dir = "proc-darwin-aarch64"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/proc-linux-x86_64.tar.gz"
bin-dir = "proc-linux-x86_64"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/proc-linux-aarch64.tar.gz"
bin-dir = "proc-linux-aarch64"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
